syntax = "proto3";

option go_package = "github.com/n0stack/n0stack/n0core/pkg/api/provisioning;provisioning";

package n0stack.internal.n0core.provisioning;

import "google/protobuf/empty.proto";

message BlockStorageAgent {
  string name = 1;
  uint64 bytes = 2;
  string path = 3;
}

service BlockStorageAgentService {
  rpc CreateEmptyBlockStorageAgent(CreateEmptyBlockStorageAgentRequest) returns (BlockStorageAgent) {}
  rpc CreateBlockStorageAgentWithDownloading(CreateBlockStorageAgentWithDownloadingRequest) returns (BlockStorageAgent) {}

  rpc DeleteBlockStorageAgent(DeleteBlockStorageAgentRequest) returns (google.protobuf.Empty) {}

  // rpc ResizeBlockStorageAgent(ResizeBlockStorageAgentRequest) returns (BlockStorageAgent) {}
  // rpc MigrateBlockStorageAgent(MigrateBlockStorageAgentRequest) returns (BlockStorageAgent) {}
}

message CreateEmptyBlockStorageAgentRequest {
  string name = 1;
  uint64 bytes = 2;
}

message CreateBlockStorageAgentWithDownloadingRequest {
  string name = 1;
  uint64 bytes = 2;

  string source_url = 4;
}

message DeleteBlockStorageAgentRequest {
  string path = 3;
}